content/bootware/1.3.2/image-files/index.md
---
title: "Image Files"
linkTitle: "DOWNLOADS: Image Files" 
description: "Links to pre-made Bootware example zi image files and keys"
lastmod: "2025-10-15"
aliases:
    - /bootware/image-files/
draft: false
images: []
weight: 70
toc: true
---

-----
### Bootware Image files available for download

Example images all have the hostname of zymbit-dev and a login of zymbit and a password of zymbit. Please change if using for anything other than development examples.
> NOTE: There are different example images for the Pi5 depending on the revision. Pi5 rev 1.1 and CM5 are supported by one example image, and Pi5 rev 1.0 is supported by a different example image. You can determine the revision of your Pi5 with `cat /proc/cpuinfo`.

#### 1.3.2-2 Images (latest available)

| Item | Size | Description |
|------|------|--------------------------|
| [zymbit_bookworm64_pi5_rev1.1_1.3.2-2.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_bookworm64_pi5_rev1.1_1.3.2-2.zi) | 809 MB | Base Bookworm 64bit (11/19/2024) zi image for Pi5 Rev 1.1 or CM5 (bw 1.3.2-2) |
| [zymbit_bookworm64_pi5_rev1.0_1.3.2-2.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_bookworm64_pi5_rev1.0_1.3.2-2.zi) | 808 MB | Base Bookworm 64bit (11/19/2024) zi image for Pi5 Rev 1.0 (bw 1.3.2-2) |
| [zymbit_ubuntu64_24.04.3_pi5_rev1.1_1.3.2-2.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_ubuntu64_24.04.3_pi5_rev1.1_1.3.2-2.zi) | 1.5 GB | Base Ubuntu 24.04.3 64bit zi image for Pi5 Rev 1.1 or CM5 (bw 1.3.2-2) |
| [zymbit_ubuntu64_24.04.3_pi5_rev1.0_1.3.2-2.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_ubuntu64_24.04.3_pi5_rev1.0_1.3.2-2.zi) | 1.5 GB | Base Ubuntu 24.04.3 64bit zi image for Pi5 Rev 1.0 (bw 1.3.2-2) |
| [zymbit_bookworm64_pi4_1.3.2-2.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_bookworm64_pi4_1.3.2-2.zi) | 890 MB | Base Bookworm 64bit zi image for Pi4/CM4 (bw 1.3.2-2) |
| [zymbit_bullseye64_pi4_1.3.2-2.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_bullseye64_pi4_1.3.2-2.zi) | 700 MB | Base Bullseye 64bit zi image for Pi4/CM4 (bw 1.3.2-2) |
| [zymbit_ubuntu64_24.04.3_pi4_1.3.2-2.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_ubuntu64_24.04.3_pi4_1.3.2-2.zi) | 1.5 GB | Base Ubuntu 24.04.3 64bit zi image for Pi4 or CM4 (bw 1.3.2-2) |
| [zymbit_ubuntu64_22.04_pi4_1.3.2-1.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_ubuntu64_22.04_pi4_1.3.2-1.zi) | 1.6 GB | Base Ubuntu 64bit 22.04 zi image for Pi4/CM4 (bw 1.3.2-1) |
| [zymbit_bookworm64_pi0_1.3.2-1.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_bookworm64_pi0_1.3.2-1.zi) | 809 MB | Base Bookworm 64bit zi image for PiZero2w (bw 1.3.2-1) |
| [zymbit_bullseye64_pi0_1.3.2-1.zi](https://bootware.s3.amazonaws.com/1.3.2/zymbit_bullseye64_pi0_1.3.2-1.zi) | 714 MB | Base Bullseye 64bit zi image for PiZero2w (bw 1.3.2-1) |
| [pub_key_1.3.2.pem](https://bootware.s3.amazonaws.com/1.3.2/pub_key_1.3.2.pem) | | Public Key - For all Bootware 1.3.2 zi images |


#### 1.3.1-2 Images

| Item | Size | Description |
|------|------|--------------------------|
| [zymbit_bookworm64_pi5_1.3.1-2.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bookworm64_pi5_1.3.1-2.zi) | 826 MB | Base Bookworm 64bit zi image for Pi5/CM5 (bw 1.3.1-2) |
| [zymbit_bookworm64_pi4_1.3.1-2.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bookworm64_pi4_1.3.1-2.zi) | 1.0 GB | Base Bookworm 64bit zi image for Pi4/CM4 (bw 1.3.1-2) |
| [zymbit_bullseye64_pi4_1.3.1-2.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bullseye64_pi4_1.3.1-2.zi) | 716 MB | Base Bullseye 64bit zi image for Pi4/CM4 (bw 1.3.1-2) |
| [zymbit_ubuntu64_22.04_pi4_1.3.1-2.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_ubuntu64_22.04_pi4_1.3.1-2.zi) | 1.5 GB | Base Ubuntu 64bit 22.04 zi image for Pi4/CM4 (bw 1.3.1-2) |
| [zymbit_bookworm64_pi0_1.3.1-2.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bookworm64_pi0_1.3.1-2.zi) | 1.0 GB | Base Bookworm 64bit zi image for PiZero2w (bw 1.3.1-2) |
| [zymbit_bullseye64_pi0_1.3.1-2.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bullseye64_pi0_1.3.1-2.zi) | 717 MB | Base Bullseye 64bit zi image for PiZero2w (bw 1.3.1-2) |
| [pub_key_1.3.1.pem](https://bootware.s3.amazonaws.com/1.3.1/pub_key_1.3.1.pem) | | Public Key - For all Bootware 1.3.1 zi images |

#### 1.3.1-1 Images

| Item | Size | Description | 
|------|------|--------------------------|
| [zymbit_bookworm64_pi4_1.3.1.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bookworm64_pi4_1.3.1.zi) | 1.0 GB | Base Bookworm 64bit zi image for Pi4/CM4 (bw 1.3.1-1) |
| [zymbit_bullseye64_pi4_1.3.1.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bullseye64_pi4_1.3.1.zi) | 1.0 GB | Base Bullseye 64bit zi image for Pi4/CM4 (bw 1.3.1-1) |
| [zymbit_ubuntu64_22.04_pi4_1.3.1.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_ubuntu64_22.04_pi4_1.3.1.zi) | 1.6 GB | Base Ubuntu 64bit 22.04 zi image for Pi4/CM4 (bw 1.3.1-1) |
| [zymbit_bookworm64_pi5_1.3.1.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bookworm64_pi5_1.3.1.zi) | 826 MB | Base Bookworm 64bit zi image for Pi5 (bw 1.3.1-1) |
| [zymbit_bookworm64_cm5_1.3.1.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bookworm64_cm5_1.3.1.zi) | 826 MB | Base Bookworm 64bit zi image for CM5 (bw 1.3.1-1) |
| [zymbit_bookworm64_pi0_1.3.1.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bookworm64_pi0_1.3.1.zi) | 1.0 GB | Base Bookworm 64bit zi image for PiZero2w (bw 1.3.1-1) |
| [zymbit_bullseye64_pi0_1.3.1.zi](https://bootware.s3.amazonaws.com/1.3.1/zymbit_bullseye64_pi0_1.3.1.zi) | 1.0 GB | Base Bullseye 64bit zi image for PiZero2w (bw 1.3.1-1) |
| [pub_key_1.3.1.pem](https://bootware.s3.amazonaws.com/1.3.1/pub_key_1.3.1.pem) | | Public Key - For all Bootware 1.3.1 zi images |

-----
### Bootware 1.3.0 General Platform Support Image files available for download

Example images all have the hostname of zymbit-dev and a login of zymbit and a password of zymbit. Please change if using for anything other than development examples.

| Item | Size | Description | 
|------|------|--------------------------|
| [zymbit_bookworm64_1.3.0.zi](https://bootware.s3.amazonaws.com/1.3/zymbit_bookworm64_1.3.0.zi) | 1.0 GB | Base Bookworm 64bit zi image (bw 1.3.0-1) |
| [zymbit_bullseye64_1.3.0.zi](https://bootware.s3.amazonaws.com/1.3/zymbit_bullseye64_1.3.0.zi) | 728 MB | Base Bullseye 64bit zi image (bw 1.3.0-1)  |
| [zymbit_ubuntu64_22.04_1.3.0.zi](https://bootware.s3.amazonaws.com/1.3/zymbit_ubuntu64_22.04_1.3.0.zi) | 1.7 GB | Base Ubuntu 22.04 64bit zi image  (bw 1.3.0-1)  |
| [zymbit_bookworm64_pi5_1.3.0.zi](https://bootware.s3.amazonaws.com/1.3/zymbit_bookworm64_pi5_1.3.0.zi) | 1.0 GB | Base Bookworm 64bit zi image for Pi5/CM5 (bw 1.3.0-1) |
| [pub_key_1.3.pem](https://bootware.s3.amazonaws.com/1.3/pub_key_1.3.pem) | | Public Key - For all Bootware 1.3 zi images |

-----

#### Bootware 1.2.2 General Platform Support Image files available for download

Example images all have the hostname of zymbit-dev and a login of zymbit and a password of zymbit. Please change if using for anything other than development examples.

> NOTE: 1.3.0 requires additional signature information that is not present in 1.2.2 and earlier zi images. Signature verification of 1.2.2 and earlier images will fail verification in zboot 1.3.0. Run `zbcli imager` to create new images if moving your existing 1.2.2 zi images to 1.3.0. See [1.3.0 upgrade](../troubleshooting/#release-130-1)

| Item | Size | Description | 
|------|------|--------------------------|
| [zymbit_bookworm64_1.2.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bookworm64_1.2.2.zi) | 1.0 GB | Base Bookworm 64bit zi image (bw 1.2.2-1) |
| [zymbit_bullseye64_1.2.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bullseye64_1.2.2.zi) | 727 MB | Base Bullseye 64bit zi image (bw 1.2.2-1)  |
| [zymbit_ubuntu64_22.04_1.2.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_ubuntu64_22.04_1.2.2.zi) | 1.7 GB | Base Ubuntu 22.04 64bit zi image  (bw 1.2.2-1)  |
| [pub_key_1.2.pem](https://bootware.s3.amazonaws.com/1.2/pub_key_1.2.pem) | | Public Key - For all Bootware 1.2.2 zi images |

-----

#### Older revision Bootware 1.2. Image files available for download

| Item | Size | Description | 
|------|------|--------------------------|
| [zymbit_bookworm64_1.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bookworm64_1.2.zi) | 1.2 GB | Base Bookworm 64bit zi image (bw 1.2.0-28) |
| [zymbit_bullseye64_1.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bullseye64_1.2.zi) | 796 MB | Base Bullseye 64bit zi image (bw 1.2.0-28)  |
| [zymbit_ubuntu64_22.04_1.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_ubuntu64_22.04_1.2.zi) | 2.1 GB | Base Ubuntu 22.04 64bit zi image  (bw 1.2.0-28)  |
| [zymbit_bookworm64_pi5_1.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bookworm64_pi5_1.2.zi) | 965 MB | Base Bookworm 64bit zi image for Pi5 (bw 1.2.0-28) |
| [pub_key_1.2.pem](https://bootware.s3.amazonaws.com/1.2/pub_key_1.2.pem) | | Public Key - For all Bootware 1.2 zi images |

-----


